Fix spacing in css

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,5 @@
 .header-container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding: 14px 20px;
     background-color: #3A3C45;
@@ -8,18 +7,19 @@
     font-weight: 600;
     font-size: 16px;
     gap: 20px;
+    justify-content: space-between; 
 }
 
 .navbar-left {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 12px; 
 }
 
 .nav-container ul {
     display: flex;
     list-style-type: none;
-    gap: 16px;
+    gap: 12px; 
     padding: 0;
     margin: 0;
 }
@@ -37,11 +37,13 @@
     opacity: 0.75;
 }
 
+
 .feed-header {
     flex-grow: 1;
     display: flex;
     justify-content: center;
 }
+
 
 .navbar-right {
     display: flex;
@@ -67,7 +69,7 @@
   justify-content: center;
   font-size: 10px;
   color: #555;
-   text-align: center;
+  text-align: center;
   line-height: 1;
   padding: 2px;
   box-sizing: border-box;
